--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -26,13 +26,20 @@ jobs:
       - uses: actions/checkout@v2
 
       # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+      - name: Make Directory1
+        run: mkdir test
+      - name: Make Directory2
+        run: mkdir test2
+        
+      - name: Log Directory Structure
+        run: dir
 
+      
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
+        shell: powershell
         run: |
-          mkdir test
-          mdkir test2
+          mkdir test4
+          mdkir test6
           dir
           
